--- a/anúncios.html
+++ b/anúncios.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de anúncios</h1>
+    <p>Anúncio OLX = Celular Iphone R$ 5.000</p>
     <a href="index.html">Voltar para a página inicial</a>
 </body>
 </html>
